--- a/themes/inhabitent-theme/sass/_forms.scss
+++ b/themes/inhabitent-theme/sass/_forms.scss
@@ -29,9 +29,8 @@ input[type="url"],
 input[type="password"],
 input[type="search"],
 textarea {
-	color: #666;
-	border: 1px solid #ccc;
-	border-radius: 3px;
+	background: transparent;
+    border: none;
 
 	&:focus {
 		color: #111;
