--- a/themes/inhabitent-theme/sass/_navigation.scss
+++ b/themes/inhabitent-theme/sass/_navigation.scss
@@ -176,30 +176,52 @@ a {
     margin-left:10px;
     margin-right:10px;
   fieldset{
-    // width: 10px;
     margin:0;
     padding:0;
     padding:0 .75rem;
    .fa-search{
-     color:white;
+     color:$color__background;
+     font-size: 15px;
    }
   input{
   transition: all 0.3s ease-in; 
   width:0px;
-  color:white;
+  color:grey;
   display:inline-block;
  } 
  ::placeholder{
-  color:white;
+  color: grey;
   text-transform:uppercase;
+  font-size:14px;
+  font-family:$font__fam-main;
 }
 
   }
 }
 
+
 label{
   float:right;
 }
+}
+
+
+.home, .about{
+  .search-bar form fieldset .fa-search{
+color:white;
+
+}
+}
+
+
+.home, .about{
+  .search-bar  fieldset {
+    ::placeholder{
+color:#f0e4d1;
+    }
+}
+
+
 }
 
 .active{
@@ -211,8 +233,6 @@ label{
     outline:none;
   }
   }
-  
- 
-}
   }
-}
+  }
+  }
