--- a/themes/inhabitent-theme/style.css
+++ b/themes/inhabitent-theme/style.css
@@ -466,7 +466,9 @@ textarea {
   input[type="password"]:focus,
   input[type="search"]:focus,
   textarea:focus {
-    color: #111; }
+    color: #111;
+    text-transform: uppercase;
+    font-weight: 100; }
 
 input[type="text"],
 input[type="email"],
@@ -611,24 +613,43 @@ a {
       padding: 0;
       padding: 0 .75rem; }
       .search-bar form fieldset .fa-search {
-        color: white; }
+        color: #248A83;
+        font-size: 15px; }
       .search-bar form fieldset input {
         -webkit-transition: all 0.3s ease-in;
         transition: all 0.3s ease-in;
         width: 0px;
-        color: white;
+        color: grey;
         display: inline-block; }
       .search-bar form fieldset ::-webkit-input-placeholder {
-        color: white;
-        text-transform: uppercase; }
+        color: grey;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-family: "Novecento Sans Web"; }
       .search-bar form fieldset ::-ms-input-placeholder {
-        color: white;
-        text-transform: uppercase; }
+        color: grey;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-family: "Novecento Sans Web"; }
       .search-bar form fieldset ::placeholder {
-        color: white;
-        text-transform: uppercase; }
+        color: grey;
+        text-transform: uppercase;
+        font-size: 14px;
+        font-family: "Novecento Sans Web"; }
   .search-bar label {
     float: right; }
+
+.home .search-bar form fieldset .fa-search, .about .search-bar form fieldset .fa-search {
+  color: white; }
+
+.home .search-bar fieldset ::-webkit-input-placeholder, .about .search-bar fieldset ::-webkit-input-placeholder {
+  color: #f0e4d1; }
+
+.home .search-bar fieldset ::-ms-input-placeholder, .about .search-bar fieldset ::-ms-input-placeholder {
+  color: #f0e4d1; }
+
+.home .search-bar fieldset ::placeholder, .about .search-bar fieldset ::placeholder {
+  color: #f0e4d1; }
 
 .active form fieldset input {
   width: 200px; }
